# snark-verifier

./: Cargo.toml
.github/workflows/: ci.yaml
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml
snark-verifier-sdk/benches/: standard_plonk.rs
snark-verifier-sdk/examples/: standard_plonk.rs
snark-verifier-sdk/src/: evm.rs  halo2.rs
snark-verifier-sdk/src/halo2/: aggregation.rs
snark-verifier/examples/: evm-verifier-with-accumulator.rs  evm-verifier.rs
snark-verifier/src/: lib.rs
snark-verifier/src/loader/: evm.rs
snark-verifier/src/loader/evm/: code.rs  loader.rs  test.rs  util.rs
snark-verifier/src/loader/evm/test/: tui.rs
snark-verifier/src/loader/evm/util/: executor.rs
snark-verifier/src/loader/halo2/: shim.rs
snark-verifier/src/pcs/kzg/: accumulation.rs  decider.rs
snark-verifier/src/pcs/kzg/multiopen/: bdfg21.rs  gwc19.rs
snark-verifier/src/system/: halo2.rs
snark-verifier/src/system/halo2/: transcript.rs
snark-verifier/src/system/halo2/transcript/: evm.rs
snark-verifier/src/util/: arithmetic.rs
