[workspace]
members = [
    "snark-verifier",
    "snark-verifier-sdk",
]
resolver = "2"

[profile.dev]
opt-level = 3

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = true
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat" 
# codegen-units = 1
panic = "abort"
incremental = false

# For performance profiling
[profile.flamegraph]
inherits = "release"
debug = true

[patch."https://github.com/axiom-crypto/halo2curves"]
halo2curves = { git = "https://github.com/timoftime/halo2curves", branch = "bls12-381/hash_to_curve" }

[patch."https://github.com/axiom-crypto/halo2-lib"]
halo2-base = { path = "../halo2-lib/halo2-base", default-features = false, features = [
    "halo2-pse",
    "display",
] }
halo2-ecc = { path = "../halo2-lib/halo2-ecc", default-features = false, features = [
    "halo2-pse",
] }
